--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -122,7 +122,7 @@ position: relative;
     height: 100%;
 }
 .topInput{
-    width: 100%;
+    width: (100% - 32px);
     max-width: 980px;
     margin: auto;
     height: 60px;
@@ -145,7 +145,7 @@ position: relative;
     background: rgba(4, 63, 4, 0.317);
     margin-right: 12px;
     display: flex;
-    margin-left: 16px;
+    /* margin-left: 16px; */
 }
 .itemCrossName{
     padding: 2px 4px;
@@ -157,6 +157,7 @@ position: relative;
     cursor: pointer;
 }
 .topInput > input {
+    display: none;
     border-radius: 5px;
     /* height:calc( 100% - 5px); */
     /* width: 100%; */
